--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,6 @@
 language: go
 go:
-  - 1.4
-  - 1.5
-  - 1.6
-  - 1.7
-  - 1.8
-  - 1.9
-  - '1.10'
+  - 1.11
   - tip
 env:
   global:
@@ -16,8 +10,10 @@ env:
     - BUILD_GOOS=darwin
     - BUILD_GOOS=windows
 before_install:
+  - go get -v -t -d ./...
   - go get github.com/axw/gocov/gocov
   - go get github.com/mattn/goveralls
   - if ! go get code.google.com/p/go.tools/cmd/cover; then go get golang.org/x/tools/cmd/cover; fi
 script:
+    - go test -v ./...
     - $HOME/gopath/bin/goveralls -service=travis-ci
